--- a/views/inscription.hbs
+++ b/views/inscription.hbs
@@ -1,3 +1,7 @@
+{{#if error}}
+  <div class="error-message" style="color:red; font-size:32px;">{{error}}</div>
+{{/if}}
+
 <section class="vh-100">
   <div class="container-fluid h-custom">
     <div class="row d-flex justify-content-center align-items-center h-100">
